# morsdle

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  st_nucleo_l4.cfg
cmake/: FindCMSIS.cmake  FindHAL.cmake  stm32_gcc.cmake
ioc/: CMakeLists.txt
ioc/morsdle/: morsdle.ioc
ioc/morsdle/Core/Inc/: main.h  stm32l4_conf.h
ioc/morsdle/Core/Src/: main.c
lib/svg/: CMakeLists.txt  svg.c
lib/svg/include/: svg.h
src/core/: CMakeLists.txt
src/core/game/: CMakeLists.txt  morsdle.c
src/core/game/include/: morsdle.h
src/core/gfx/: CMakeLists.txt  display.c  drawing.c  render_pass.c  renderer.c
src/core/gfx/include/: canvas.h  display.h  drawing.h  drawing_ops.h  renderer.h
src/core/gfx/include/operations/: letter_operations.h  line_operations.h  rectangle_operations.h
src/core/gfx/operations/: letter_operations.c  line_operations.c  rectangle_operations.c
src/core/morse/: CMakeLists.txt  morse.c
src/core/morse/include/: morse.h
src/core/util/: CMakeLists.txt  cbuff.c  imagebuffer.c  llist.c
src/core/util/include/: allocations.h  cbuff.h  imagebuffer.h  llist.h
src/drivers/waveshare/: CMakeLists.txt  waveshare_display.c
src/drivers/waveshare-api/: CMakeLists.txt  waveshare_api.c
src/drivers/waveshare-api/include/: waveshare_api.h  waveshare_spi.h
src/drivers/waveshare-canvas/: CMakeLists.txt  fonts.c  waveshare_canvas.c
src/drivers/waveshare-canvas/include/: waveshare_canvas.h
src/drivers/waveshare-display/: CMakeLists.txt  fonts.c  waveshare_display.c  waveshare_image_buffer.c
src/drivers/waveshare-display-stm/: CMakeLists.txt  waveshare_stm.c
src/drivers/waveshare-display-stm/include/: waveshare_stm.h
src/drivers/waveshare-display/include/: waveshare_display.h  waveshare_image_buffer.h
src/drivers/waveshare-util/: CMakeLists.txt  imagebuffer.c
src/drivers/waveshare-util/include/: imagebuffer.h
src/drivers/waveshare/include/: waveshare_display.h
src/stm/: CMakeLists.txt  main.c
src/stm/debug/: stm_stdio.c
src/stm/debug/include/: stm_stdio.h
src/stm/flash/: stm_flash.c
src/stm/flash/include/: stm_flash.h  stm_flash_read.h  stm_flash_write.h
src/stm/main/: CMakeLists.txt  debug.c  game.c  loader.c  main.c  morsdle_main.c  waveshare_spi.c
src/stm/main/include/: debug.h  morsdle_main.h  stm32l4xx_hal_conf.h  waveshare_spi_impl.h  words.h
src/stm/shared/: CMakeLists.txt
src/stm/shared/include/: stm32l4xx_hal_conf.h
src/stm/waveshare-display-stm/: CMakeLists.txt  waveshare_stm.c
src/stm/waveshare-display-stm/include/: waveshare_stm.h
stm/: CMakeLists.txt
stm/core/: CMakeLists.txt  drawing.c  morsdle.c
stm/core/include/: display.h  drawing.h  morsdle.h
stm/core/include/operations/: letter_operations.h  line_operations.h
stm/core/operations/: letter_operations.c  line_operations.c
stm/mock_display/: CMakeLists.txt  mock_display.c
test/core/: CMakeLists.txt
test/core/mock-display/: CMakeLists.txt  mock_display.c
test/core/test-core/: test_morsdle.c
test/core/test-game/: CMakeLists.txt  test_morsdle.c
test/core/test-gfx/: CMakeLists.txt  mock_display.c  test_renderer.c
test/core/test-gfx/include/: mock_display.h
test/core/test-morse/: CMakeLists.txt  test_morse.c
test/core/test-util/: CMakeLists.txt  test-llist.c  test_cbuff.c  test_imagebuffer.c  test_llist.c
test/core/test-waveshare-display/: CMakeLists.txt  test_waveshare_display.c
test/core/test-waveshare-util/: CMakeLists.txt  test_waveshare_imagebuffer.c
